# Aurora

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Lexer.cpp.648C8E4CA75E2F7C.idx  Lexer.h.E4324C8765F5DF68.idx  dummy.h.DD1DD2DF4FD568B7.idx  main.cpp.996222A9575C5ED2.idx
src/: Lexer.cpp  Lexer.h  main.cpp
src/AST/: BinaryExprAST.h  CallExprAST.h  ExprAST.h  FunctionAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Logger/: Logger.cpp  Logger.h
src/Parser/: Parser.cpp  Parser.h
